[workspace]
members = [
    "xcap",
    "ros2-builtin-interfaces",
    "ros2-sensor-msgs",
    "ros2-std-msgs",
    "ros2-geometry-msgs",
    "ros2-nav-msgs",
]

resolver = "2"

[workspace.dependencies]
ros2-sensor-msgs = { path = "./ros2-sensor-msgs", version = "0.1.0" }
ros2-geometry-msgs = { path = "./ros2-geometry-msgs", version = "0.1.0" }
ros2-std-msgs = { path = "./ros2-std-msgs", version = "0.1.0" }
ros2-nav-msgs = { path = "./ros2-nav-msgs", version = "0.1.0" }
ros2-builtin-interfaces = { path = "./ros2-builtin-interfaces", version = "0.1.0" }
serde = { version = "1.0.204", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH",
]
