[workspace]
members = ["xcap"]

resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH",
]
