[workspace]
members = ["xcap", "ros2-message-traits"]

resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.30"
ros2-message-traits = { path = "ros2-message-traits" }
ros2-interfaces-humble = { path = "ros2-interfaces-humble" }
