[package]
name = "xcap"
description = "A simple MCAP extractor"
version = "0.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdr = "0.2.4"
clap = { version = "4.5.9", features = ["derive"] }
mcap = { version = "0.13.0" }
serde = { workspace = true }
zstd = "0.13.2"
openh264 = "0.6.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
image = "0.25.2"
ros2-sensor-msgs = { workspace = true }
ros2-builtin-interfaces = { workspace = true }
thiserror = "1.0.63"
env_logger = { workspace = true }
log = { workspace = true }
minio = "0.1.0"
tokio = "1.39.2"
reqwest = "0.11.27"
url = "2.5.2"
rand = "0.8.5"
ctrlc = "3.4.5"
rerun = { version = "0.22.1", features = ["native_viewer"] }
quaternion-core = "0.5.2"
colorgrad = "0.7.0"
chrono = "0.4.39"
memmap2 = "0.9.5"
bstr = "1.11.3"
imageproc = "0.25.0"
libyuv = "1.0.0"
pcd-rs = "0.12.0"
indicatif-log-bridge = "0.2.3"

[features]
native_viewer = []

# To package a DEB package
[package.metadata.deb]
maintainer = "Yin Guobing <yinguobing@gmail.com>"
copyright = "2024, Yin Guobing <yinguobing@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple MCAP extractor."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/xcap",
        "usr/bin/",
        "755",
    ],
    [
        "../README.md",
        "usr/share/doc/xcap/README",
        "644",
    ],
]
