[package]
name = "xcap"
description = "A simple MCAP extractor"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdr = "0.2.4"
clap = { version = "4.5.41", features = ["derive"] }
mcap = { version = "0.13.3" }
serde = { workspace = true }
zstd = "0.13.3"
openh264 = "0.6.6"
indicatif = { version = "0.18.0", features = ["rayon"] }
image = "0.25.6"
thiserror = "1.0.69"
env_logger = { workspace = true }
log = { workspace = true }
minio = "0.1.0"
tokio = "1.46.1"
reqwest = "0.11.27"
url = "2.5.4"
rand = "0.8.5"
ctrlc = "3.4.7"
rerun = { version = "0.23.4", features = ["native_viewer"] }
quaternion-core = "0.5.4"
colorgrad = "0.7.2"
chrono = "0.4.41"
memmap2 = "0.9.7"
bstr = "1.12.0"
imageproc = "0.25.0"
libyuv = "1.0.0"
pcd-rs = "0.12.0"
indicatif-log-bridge = "0.2.3"
ros2-interfaces-humble = { version = "0.0.1", features = ["sensor_msgs"] }

[features]
native_viewer = []

# To package a DEB package
[package.metadata.deb]
maintainer = "Yin Guobing <yinguobing@gmail.com>"
copyright = "2024, Yin Guobing <yinguobing@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple MCAP extractor."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/xcap",
        "usr/bin/",
        "755",
    ],
    [
        "../README.md",
        "usr/share/doc/xcap/README",
        "644",
    ],
]
